delete classes and use interfaces
